2004-06-07 multipath-tools-0.2.2
	* [multipath] leave out 2.4 compat code. Is there
	  interest anyway ?
	* [multipath] convert all_paths table to vector api.
	  Rename to pathvec. Get rid of max_devs
	* [multipath] convert mp table to vector api
	* convert blacklist to vector api
	* 2.6.7-rc? adds _user annotations to scsi/sg.h, causing
	  compilation breakage. Add a "#define _user" in all
	  sg_include.h (and remove cruft)
	* merge a real parser (from keepalived) courtesy of 
	  Alexandre Cassen. Now multipath and multipathd share a
	  config file. This comes with a nice vector lib.
	* devnode blacklist moved from hardcoded to config file
	* Guy Coates noted -O2 CFLAGS lead to multipathd crashes
	  on IA64. Remove the needless optimisation for now.
2004-06-05 multipath-tools-0.2.1
	* [multipath] add a flag to inihibit the final SIGHUP to
	  multipathd. Needed to avoid recursion with the correction
	  below
	* [multipathd] devmap event now triggers a multipath exec
	  in addition to the usual updatepaths()
	* [multipathd] move checkers from sg_io on BLK onto CHR
	  readsector0 goes from read to sg_read
	* [multipathd] rely on sysfs for failedpaths enum and no
	  longer on the device mapper
	* [multipathd] convert get_lun_strings from ioctl to sysfs
	  so we can benefit from strings persistency for failed
	  paths
	* [multipath] readconfig() to take only 8 char from vendor
	  string (ake)
	* [multipath] remove unecessery and wrong getuid == NULL
	  check from devinfo() (ake)
	* [multipathd] make readsector0 open path O_DIRECT
	* [multipathd] sizeof(path) -> sizeof(struct path) (MikeC)
	* [Makefile] don't try to install and uninstall libs
	* [devmap_name] kill the wrong trailing '\n'
	  (Mike Christie)
	* [kpartx] works with device nodes outside /dev
	* [kpartx] correctly display the delimiter in partition
	  name outputs
2004-05-17 multipath-tools-0.2.0
	* change the default klibc by greg's :
	  corrects the segfaults reported by Ling Hwa Hing